<resources>
    <string name="app_name">ClientWebSocketApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="server_on_visible">Your device is visible in the network!</string>
    <string name="server_off_invisible">Your device is not visible in the network!</string>

    <string name="network_manager">Network manager</string>
    <string name="file_manager">File manager</string>
    <string name="favorite_files">Favorite files</string>


    <string name="scanning_network">Scan network</string>
    <string name="found_devices">Found devices</string>
    <string name="no_devices">No devices</string>

    <!-- file info fragment -->
    <string name="file_info">File info</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="favorites_add">Add to Favorites</string>
    <string name="favorites_remove">Remove from Favorites</string>

    <string name="directory">Directory: </string>
    <string name="name">Name: </string>
    <string name="creation_date">Last modified date: </string>
    <string name="size">Size: </string>

    <string name="text_file">file</string>
    <string name="text_files">files</string>

    <string name="delete_file">Delete file</string>
    <string name="sure_delete">Are you sure want to delete this file?</string>
    <string name="file_deleted">File successfully deleted!</string>
    <string name="file_not_deleted">The file could not be deleted!</string>

    <string name="rename_file">Rename file</string>
    <string name="rename_successful">The file was renamed successfully</string>
    <string name="rename_not_successful">The file was not renamed</string>

    <!--selected files-->
    <string name="selected_files_num">Selected files: %1$d</string>
    <string name="visibility">Visibility in the network</string>

    <!--titles-->
    <string name="favorite">Favorite</string>
    <string name="network">Network</string>
    <string name="files">Files</string>
    <string name="select_device">Select a device</string>
    <string name="devices">Devices</string>
    <string name="send">Send</string>
    <string name="permission_title">Permission to transfer data</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="txt_message_close_app">Double tap to exit!</string>
    <string name="waiting_for_permission">We are waiting for permission to transfer data</string>

</resources>
