<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_grey_400"
    android:orientation="vertical">
    <Button
        android:id="@+id/btnScannNetworkDevices"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/scanning_network"/>

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/found_devices"/>

    <View
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvNetworkDevices"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recycler_device_item">
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:visibility="gone"
        android:id="@+id/tvNoDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/no_devices"/>
</LinearLayout>